# RouthHurwitz

./: .gitignore  LICENSE  Procfile  README.md  RouthHurwitz.py  RouthHurwitzWeb.py  app.py  pyproject.toml  requirements.txt  routh_hurwitz.py  secret_key.txt
routhhurwitz/: __init__.py  routhhurwitz.py
static/: styles.css
templates/: base.html  home.html  routharray.html
